--- a/views/preachers/index.ejs
+++ b/views/preachers/index.ejs
@@ -57,7 +57,7 @@
                         <div class="preacher__info">
                             <div class="info">
                                 <p><%= preacher.name %></p>
-                                <a href="/preachers/search?preacher=<%= preacher._id %>" class="preacher__link">Zobacz tereny głosiciela</a>
+                                <a href="/territories/search?preacher=<%= preacher._id %>" class="preacher__link">Zobacz tereny głosiciela</a>
                             </div>
                             <div class="preachers-buttons">
                                 <a href="/preachers/<%= preacher._id %>/edit">
