--- a/views/territories/show.ejs
+++ b/views/territories/show.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/header") %>
 <div class="container">
     <div class="row justify-content-center">
-        <%- include("../partials/territory", {territory: territory, show: ''}) %>
+        <%- include("../partials/territory", {territory: territory, show: '', preachers}) %>
     </div>
 </div>
 
